--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Tianyi"
     tools:context=".MainActivity">
 
     <Button
@@ -27,5 +28,47 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
+
+    <ImageButton
+        android:id="@+id/card_left"
+        style="@android:style/Widget.Holo.Light.ImageButton"
+        android:layout_width="180dp"
+        android:layout_height="240dp"
+        android:layout_marginStart="272dp"
+        android:layout_marginTop="44dp"
+        android:background="?android:selectableItemBackgroundBorderless"
+        android:contentDescription="@string/card_left_description"
+        android:scaleType="centerInside"
+        android:src="@drawable/back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/card_middle"
+        style="@android:style/Widget.Holo.Light.ImageButton"
+        android:layout_width="180dp"
+        android:layout_height="240dp"
+        android:layout_marginStart="272dp"
+        android:layout_marginTop="44dp"
+        android:background="?android:selectableItemBackgroundBorderless"
+        android:contentDescription="@string/card_middle_description"
+        android:scaleType="centerInside"
+        android:src="@drawable/back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/card_right"
+        style="@android:style/Widget.Holo.Light.ImageButton"
+        android:layout_width="180dp"
+        android:layout_height="240dp"
+        android:layout_marginStart="272dp"
+        android:layout_marginTop="44dp"
+        android:background="?android:selectableItemBackgroundBorderless"
+        android:contentDescription="@string/card_right_description"
+        android:scaleType="centerInside"
+        android:src="@drawable/back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
