--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         style="@android:style/Widget.Holo.Light.ImageButton"
         android:layout_width="180dp"
         android:layout_height="240dp"
-        android:layout_marginStart="272dp"
+        android:layout_marginStart="250dp"
         android:layout_marginTop="10dp"
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/card_left_description"
@@ -50,22 +50,20 @@
         style="@android:style/Widget.Holo.Light.ImageButton"
         android:layout_width="180dp"
         android:layout_height="240dp"
-        android:layout_marginStart="272dp"
-        android:layout_marginTop="10dp"
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/card_left_description"
         android:scaleType="centerInside"
         android:src="@drawable/back"
         android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/card_middle_back"
+        app:layout_constraintTop_toTopOf="@id/card_middle_back" />
 
     <ImageButton
         android:id="@+id/card_middle_back"
         style="@android:style/Widget.Holo.Light.ImageButton"
         android:layout_width="180dp"
         android:layout_height="240dp"
-        android:layout_marginStart="272dp"
+        android:layout_marginStart="250dp"
         android:layout_marginTop="10dp"
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/card_middle_description"
@@ -79,43 +77,37 @@
         style="@android:style/Widget.Holo.Light.ImageButton"
         android:layout_width="180dp"
         android:layout_height="240dp"
-        android:layout_marginStart="272dp"
-        android:layout_marginTop="10dp"
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/card_middle_description"
         android:scaleType="centerInside"
         android:src="@drawable/back"
         android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/card_middle_back"
+        app:layout_constraintTop_toTopOf="@id/card_middle_back" />
 
     <ImageButton
         android:id="@+id/card_right_back"
         style="@android:style/Widget.Holo.Light.ImageButton"
         android:layout_width="180dp"
         android:layout_height="240dp"
-        android:layout_marginStart="272dp"
-        android:layout_marginTop="10dp"
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/card_right_description"
         android:scaleType="centerInside"
         android:src="@drawable/back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/card_middle_back"
+        app:layout_constraintTop_toTopOf="@id/card_middle_back" />
 
     <ImageButton
         android:id="@+id/card_right_face"
         style="@android:style/Widget.Holo.Light.ImageButton"
         android:layout_width="180dp"
         android:layout_height="240dp"
-        android:layout_marginStart="272dp"
-        android:layout_marginTop="10dp"
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/card_right_description"
         android:scaleType="centerInside"
         android:src="@drawable/back"
         android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/card_middle_back"
+        app:layout_constraintTop_toTopOf="@id/card_middle_back" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
