--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         android:contentDescription="@string/card_left_description"
         android:scaleType="centerInside"
         android:src="@drawable/back"
+        android:onClick="onLeftClick"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,7 +54,7 @@
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/card_left_description"
         android:scaleType="centerInside"
-        android:src="@drawable/back"
+        android:src="@drawable/blank"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@id/card_middle_back"
         app:layout_constraintTop_toTopOf="@id/card_middle_back" />
@@ -69,6 +70,7 @@
         android:contentDescription="@string/card_middle_description"
         android:scaleType="centerInside"
         android:src="@drawable/back"
+        android:onClick="onMiddleClick"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -80,7 +82,7 @@
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/card_middle_description"
         android:scaleType="centerInside"
-        android:src="@drawable/back"
+        android:src="@drawable/blank"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@id/card_middle_back"
         app:layout_constraintTop_toTopOf="@id/card_middle_back" />
@@ -94,6 +96,7 @@
         android:contentDescription="@string/card_right_description"
         android:scaleType="centerInside"
         android:src="@drawable/back"
+        android:onClick="onRightClick"
         app:layout_constraintStart_toStartOf="@id/card_middle_back"
         app:layout_constraintTop_toTopOf="@id/card_middle_back" />
 
@@ -105,7 +108,7 @@
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/card_right_description"
         android:scaleType="centerInside"
-        android:src="@drawable/back"
+        android:src="@drawable/blank"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@id/card_middle_back"
         app:layout_constraintTop_toTopOf="@id/card_middle_back" />
